testing the token logic with mocked api and introducing the Login work flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.andor.navigate.logit">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <dist:module dist:instant="true" />
 
     <application
@@ -13,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".welcome.WelcomeActivity"></activity>
+        <activity android:name=".welcome.WelcomeActivity" />
         <activity android:name=".auth.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
