--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     //retrofit and okhttp
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    //JWT Decoder
+    implementation 'com.auth0.android:jwtdecode:1.3.0'
+
 }
